# personaplex

./: Dockerfile  Makefile  README.md  docker-compose.yaml
livekit-plugins-moshi/: example_agent.py  pyproject.toml
livekit-plugins-moshi/livekit/plugins/moshi/: __init__.py  realtime_model.py
moshi/: pyproject.toml
moshi/moshi/: offline.py  server.py
moshi/moshi/models/: loaders.py
moshi/moshi/modules/: gating.py  transformer.py
moshi/moshi/utils/: quantize.py
