[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-moshi"
version = "0.1.0"
description = "LiveKit Agents plugin for Moshi/PersonaPlex real-time speech-to-speech models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "livekit-agents>=1.0",
    "aiohttp>=3.9",
    "numpy>=1.26",
    "sphn>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["livekit"]
